Implement unified limit management with AppLimitsConfig and LimitService